configuration-ui/src/assets/css/common.less
//Common.less

html {
    position: relative;
    height: 100%;
}

body {
}

.full-height {
    height: 100%;
}

.footer {
    width: 100%;
    height: 20px;
    margin-top: 20px;
    background-color: #f5f5f5;
    text-align: center;
}

.navbar {
    .github {
        font-size: 30px;
        padding: 10px;
    }

    .g-signin2 {
        margin-top: 7px;
    }

    li>a {
        cursor: pointer;
    }
}

.dropdown {
    .dropdown-row {
        padding-right: 20px;
        padding-left: 20px;
        padding-bottom: 5px;
        padding-top: 5px;
        width: 220px;

        // in order to match bootstrap dropdown li's
        a {
            text-decoration: none;
            color: #333;
            &:hover, &:focus {
                color: red;
            }
        }

        &:hover, &:focus {
            background-color: #f5f5f5;
        }

        .name {
            float: left;
            width: 100px;
            overflow: hidden;
            text-overflow: ellipsis;
        }

        .statsIcon {
            float: right;
        }
    }
}

